<resources>
    <string name="app_name">TicTacToe</string>
    <string name="homeTitle">Tic Tac Toe</string>
    <string name="playButton">Play</string>

    <string name="PlayerSetupTitle">Enter Your Name</string>
    <string name="Label1">Player1</string>
    <string name="Label2">Player2</string>
    <string name="submitButton">Submit Names</string>
    <string name="nameHint">Enter Your Name</string>

    <string name="replayButton">Play Again</string>
    <string name="homeButton">Home</string>
</resources>